tests/ui/generic-associated-types/issue-102335-gat.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-102335-gat.rs:2:21
   |
LL |     type A: S<C<(), i32 = ()> = ()>;
   |                     ^^^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
